<resources>
    <string name="app_name">My Application</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_house_manager">HouseManager</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="yours">Yours</string>
    <string name="done">Done</string>
    <string name="insert_chore_name">Insert Chore Name</string>
    <string name="insert_chore_description">Description of chore</string>
    <string name="new_task_heading">NEW TASK</string>
    <string name="sign_in">Sign In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all">All</string>
    <string name="title_activity_calendar">activity_calendar</string>
    <string name="houseid">HouseID:</string>
    <string name="password">Password:</string>
    <string name="user">User:</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_house_id">Enter House ID</string>
    <string name="enter_username">Enter Username</string>
    <string name="complete">Complete</string>
    <string name="due">Due</string>
    <string name="title_activity_bridgette">Bridgette</string>
    <string name="title_activity_main_all">main_all</string>
    <string name="date_input">Select Date</string>

    <string-array name="frequency_array">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Bi-Weekly</item>
        <item>Monthly</item>
    </string-array>


    <string-array name="house_list">
        <item>Bridgette</item>
        <item>Carlos</item>
        <item>Christine</item>
        <item>Colin</item>
        <item>Jony</item>
        <item>Malcolm</item>
        <item>Timmy</item>
    </string-array>
</resources>
