<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_user"
    tools:context=".create_house">

    <RelativeLayout
        android:layout_width="403dp"
        android:layout_height="422dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/SignInBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="51dp"
            android:onClick="toMain"
            android:text="Register" />

        <EditText
            android:id="@+id/UsernameInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/PasswordInput"
            android:layout_alignTop="@id/Username"
            android:layout_marginBottom="20dp"
            android:layout_toEndOf="@id/Username"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_username"
            android:inputType="textPersonName"
            tools:layout_alignEnd="@id/PasswordInput" />

        <EditText
            android:id="@+id/PasswordInput"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/Password"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:layout_toEndOf="@id/Password"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/HouseID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Password"
            android:layout_alignStart="@id/Password"
            android:layout_marginTop="24dp"
            android:text="@string/houseid"
            android:textColor="#FFFFFF"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/SignInBtn"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="-300dp"
            android:text="@string/user"
            android:textColor="#FFFFFF"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/Username"
            android:layout_alignStart="@id/Username"
            android:layout_marginTop="24dp"
            android:text="@string/password"
            android:textColor="#FFFFFF"
            android:textSize="28sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="158dp"
            android:layout_height="39dp"
            android:layout_alignWithParentIfMissing="false"
            android:layout_below="@+id/PasswordInput"
            android:layout_alignTop="@id/HouseID"
            android:layout_alignParentEnd="false"
            android:layout_marginStart="42dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="45dp"
            android:layout_toEndOf="@+id/HouseID"
            android:text="A1J98VB"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF"
            android:textSize="28sp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>